testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport5.errors.txt
usage.js(1,19): error TS7016: Could not find a declaration file for module './lateBoundAssignmentDeclarationSupport5.js'. 'lateBoundAssignmentDeclarationSupport5.js' implicitly has an 'any' type.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport5.js");
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7016: Could not find a declaration file for module './lateBoundAssignmentDeclarationSupport5.js'. 'lateBoundAssignmentDeclarationSupport5.js' implicitly has an 'any' type.
    const inst =  new x.F();
    const y = inst["my-fake-sym"];
    const z = inst[x.S];
    
==== lateBoundAssignmentDeclarationSupport5.js (0 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    function F() {
    }
    F.prototype = {
        [_sym]: "ok",
        [_str]: "ok"
    }
    const inst =  new F();
    const _y = inst[_str];
    const _z = inst[_sym];
    module.exports.F = F;
    module.exports.S = _sym;